apps/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: NodePort
  selector:
    app: django-app
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30800
