apps/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: django-dev.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service
            port:
              number: 8000
